# permutation_and_combination

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  permutation.cpp  permutation.h
