CMAKE_MINIMUM_REQUIRED(VERSION 3.19.0)

PROJECT(PermutationCombination C CXX)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_CXX_STANDARD 17)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)